# qai

./: .coderabbit.yaml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_WORKFLOW.md  README.md  SECURITY.md  coderabbit.yaml  mint.json  patch.py  pyproject.toml
.cursor/rules/: ctpf-vault-ops.mdc
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
.jules/: bolt.md
compat/q-uestionable-ai/: README.md  pyproject.toml
docs/: Architecture.md  Roadmap.md  json-bundle-schema.md
docs/concepts/: capability-trust-propagation.md
docs/exports/: csv.mdx  json-schema.mdx  ndjson.mdx
docs/integrations/: defectdojo.mdx  github-security.mdx
documentation/: changelog.mdx  concepts.mdx  docs.json  identity-compatibility.mdx  introduction.mdx  llms.txt  quickstart.mdx  responsible-use.mdx
documentation/architecture/: audit-module.mdx  chain-module.mdx  core.mdx  cxp-module.mdx  inject-module.mdx  ipi-module.mdx  overview.mdx  proxy-module.mdx  rxp-module.mdx
documentation/assist/: cli.mdx  configuration.mdx  knowledge-base.mdx  overview.mdx  trust-boundaries.mdx
documentation/audit/: cli.mdx  fixtures.mdx  framework-coverage.mdx  overview.mdx  owasp-mapping.mdx  sarif-output.mdx  scanners.mdx
documentation/chain/: cli.mdx  overview.mdx  templates.mdx
documentation/cli/: db.mdx  findings.mdx  runs.mdx  targets.mdx
documentation/config/: callback-server.mdx  dangerous-payloads.mdx  environment-variables.mdx  providers.mdx  transports.mdx
documentation/cxp/: assistant-formats.mdx  cli.mdx  deployment-playbook.mdx  objectives.mdx  overview.mdx  validation.mdx
documentation/experiments/: agent-operable.mdx  cascade-memo.mdx  pattern2.mdx
documentation/exports/: csv.mdx  json-schema.mdx  ndjson.mdx  sarif.mdx
documentation/imports/: overview.mdx
documentation/inject/: campaigns.mdx  cli.mdx  overview.mdx  payloads.mdx
documentation/integrations/: defectdojo.mdx  github-security.mdx
documentation/ipi/: callbacks.mdx  cli.mdx  dashboard.mdx  deployment-playbook.mdx  formats.mdx  overview.mdx  payloads.mdx  techniques.mdx  templates.mdx
documentation/method/: claims-and-limitations.mdx  evidence.mdx  observations-and-scoring.mdx  overview.mdx
documentation/proxy/: cli.mdx  intercept.mdx  overview.mdx  replay.mdx  session-export.mdx
documentation/rxp/: cli.mdx  interpretive-bands.mdx  models-profiles.mdx  overview.mdx
documentation/web-ui/: admin.mdx  intel.mdx  launcher.mdx  operations.mdx  overview.mdx  research.mdx  runs.mdx  settings.mdx
scripts/: bipia_to_scored.py
src/ctpf/: __init__.py  __main__.py  cli.py  driven_inference.py  experiment.py  external_runtime.py
src/q_ai/: __init__.py  __main__.py  cli.py  ctpf.py  driven_inference.py  experiment.py  external_runtime.py
tests/: conftest.py  test_cli.py  test_packaging.py
tests/assist/: __init__.py  test_cli.py  test_knowledge.py  test_prompt.py  test_service.py
tests/audit/: test_adapter.py  test_cli.py  test_csv_report.py  test_html_report.py  test_mapper.py  test_ndjson_report.py  test_orchestrator.py  test_prompt.py  test_registry.py  test_reporting.py  test_sarif_report.py
tests/automation/: test_adversarial.py  test_approval_store.py  test_cli.py  test_contracts.py  test_governance_cli.py  test_policy.py  test_service.py  test_targets.py
tests/chain/: conftest.py  test_adapter.py  test_artifacts.py  test_blast_radius.py  test_chain_e2e.py  test_cli.py  test_detection.py  test_dispatchers.py  test_executor.py  test_executor_models.py  test_loader.py  test_mapper.py  test_tracer.py  test_validator.py  test_variables.py
tests/cli/: __init__.py  test_db_cli.py  test_runs_cli.py  test_targets_cli.py
tests/core/: test_bridge_token.py  test_cli_config.py  test_cli_findings.py  test_cli_prompt.py  test_cli_runs.py  test_cli_targets.py  test_cli_update_frameworks.py  test_config.py  test_config_credentials.py  test_cross_run_queries.py  test_db.py  test_db_run_history.py  test_framework_update.py  test_frameworks.py  test_guidance.py  test_list_evidence.py  test_llm.py  test_llm_litellm.py  test_mitigation.py  test_mitigation_serialization.py  test_models.py  test_paths.py  test_providers.py  test_schema_migration_v13.py  test_schema_migration_v14.py  test_schema_migration_v15.py  test_schema_v2.py  test_update_frameworks.py
tests/ctpf/: test_cascade.py  test_cascade_memo_fixture.py  test_ctpf.py  test_driven_inference.py  test_experiment.py  test_experiment_matrix.py  test_external_runtime.py  test_pattern2_experiment.py  test_pattern2_fixture.py  test_pattern3_experiment.py  test_pattern3_scope.py  test_pattern3_scope_fixture.py  test_trace.py  test_verify.py
tests/cxp/: __init__.py  test_adapter.py  test_base_loader.py  test_builder_v2.py  test_catalog.py  test_cli.py  test_db.py  test_db_init.py  test_formats.py  test_guidance_builder.py  test_mapper.py  test_models.py  test_objectives.py  test_prompt_reference.py  test_reporter.py  test_techniques.py  test_validator.py
tests/fixtures/: pattern2_preflight.py  pattern_cascade_memo.py  proxy_vuln_injection.py  test_pattern2_preflight.py  test_pattern_cascade_memo.py
tests/imports/: test_bipia.py  test_cli.py  test_garak.py  test_models.py  test_pyrit.py  test_sarif.py  test_scored.py  test_taxonomy.py
tests/inject/: test_adapter.py  test_campaign.py  test_campaign_integration.py  test_cli.py  test_coverage.py  test_loader.py  test_mapper.py  test_models.py  test_scoring.py  test_serve_integration.py  test_server.py
tests/ipi/: test_adapter.py  test_callback_rationale.py  test_callback_state.py  test_cli.py  test_cli_callback_state.py  test_cli_tunnel.py  test_create_campaign_ids.py  test_db.py  test_db_init.py  test_encoding.py  test_export_prompt.py  test_generate_service_template.py  test_generate_target_selection.py  test_generators_citation.py  test_guidance_builder.py  test_listener.py  test_mapper.py  test_path_traversal.py  test_probe_cli.py  test_probe_service.py  test_server_defaults.py  test_server_forwarded_headers.py  test_tunnel.py  (+6 more)
(+515 files in other folders)
