[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "q-uestionable-ai"
version = "0.10.4"
description = "Security testing for agentic AI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Richard Spicer", email = "richard@richardspicer.io" },
]
keywords = ["security", "ai", "mcp", "security-testing", "agentic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "websockets>=15.0",
    "mcp>=1.26,<2",
    "anthropic>=0.84",
    "litellm>=1.80,!=1.82.7,!=1.82.8",
    "keyring>=25.0",
    "textual>=0.80",
    # IPI document generators
    "reportlab>=4.4.0",
    "pypdf>=6.9.2",
    "piexif>=1.1.3",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.20",
    "requests>=2.33.0",
    "icalendar>=6.1.0",
    "markdown>=3.5",
    "nh3>=0.2",
    # RXP retrieval poisoning
    "sentence-transformers>=5.2,<6",
    "chromadb>=1.5,<2",
    "numpy>=1.26",
    "torch>=2.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
qai = "q_ai.cli:app"

[project.urls]
Homepage = "https://q-uestionable.ai"
Repository = "https://github.com/q-uestionable-AI/qai"
Issues = "https://github.com/q-uestionable-AI/qai/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/q_ai"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "pre-commit>=3.5",
    "mypy>=1.8",
    "ruff>=0.4",
    "types-pyyaml>=6.0",
    "httpx>=0.27",
    "pip-audit>=2.7",
    "bandit>=1.9.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "SIM", "S", "A", "C4", "DTZ", "T20", "RUF",
    "N", "PTH", "RET", "TRY", "C90", "PERF", "ERA", "PLC", "PLE", "PLR", "PLW",
]
ignore = [
    "S101",     # assert usage (fine in tests)
    "PLR2004",  # magic-value-comparison — too noisy for status codes, enum ints, thresholds
    "PLC0415",  # import-outside-top-level — deferred imports are intentional
    "TRY003",   # raise-vanilla-args — descriptive error messages in raise are preferred
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N806", "PLR0913"]
"src/q_ai/**/cli*.py" = ["B008", "PLR0913"]  # typer.Option() defaults + many CLI params
"src/q_ai/core/db.py" = ["A002", "PLR0913"]  # type/hash params match DB column names + CRUD args
"src/q_ai/server/**" = ["B008", "PLR0913"]  # FastAPI Depends() defaults + route params
"src/q_ai/ipi/server.py" = ["B008"]
"src/q_ai/ipi/api.py" = ["B008", "A002", "PLR0913"]  # format param + many form fields
"src/q_ai/ipi/generate_service.py" = ["PLR0913"]  # document generation takes many params
"src/q_ai/ipi/generators/*" = ["PLR0913"]  # document generators take many params
"src/q_ai/audit/mapper.py" = ["PLR0913"]  # audit scan creation takes many params
"src/q_ai/cxp/db.py" = ["PLR0913"]  # CXP record_result takes many params
"src/q_ai/proxy/tui/app.py" = ["PLR0913"]  # TUI app constructor takes transport config params

[tool.bandit]
# Skip checks already enforced by ruff's flake8-bandit (S) rules.
# All instances are reviewed and suppressed with # noqa: SXXX in source.
# Bandit doesn't recognize # noqa — it uses # nosec — so we skip at config level.
skips = [
    "B101",  # assert usage — ruff S101 (ignored in tests via per-file-ignores)
    "B105",  # hardcoded password string — false positive on token filenames
    "B110",  # try/except/pass — reviewed, DB may not exist on first run
    "B310",  # urlopen — framework update fetcher, reviewed
    "B506",  # yaml.load — uses custom DuplicateKeyLoader, not unsafe default
    "B608",  # SQL injection — all use parameterized ? placeholders with f-string placeholder counts
    "B104",  # hardcoded bind all interfaces — proxy client adapters must accept network connections
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
]
