[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ctpf"
version = "0.13.0"
description = "Trust-boundary testing for agentic systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Richard Spicer", email = "richard@richardspicer.io" },
]
keywords = ["security", "ai", "mcp", "security-testing", "agentic-ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.34",
    "mcp>=1.26,<2",
    "litellm>=1.80,<1.92,!=1.82.7,!=1.82.8",
    "keyring>=25.0",
    "textual>=0.80",
]

[project.scripts]
ctpf = "ctpf.cli:app"

[project.urls]
Homepage = "https://q-uestionable.ai"
Repository = "https://github.com/q-uestionable-AI/CTPF"
Issues = "https://github.com/q-uestionable-AI/CTPF/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ctpf"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "pre-commit>=3.5",
    "mypy>=1.8",
    "ruff>=0.4",
    "types-pyyaml>=6.0",
    "pip-audit>=2.7",
    "bandit>=1.9.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "SIM", "S", "A", "C4", "DTZ", "T20", "RUF",
    "N", "PTH", "RET", "TRY", "C90", "PERF", "ERA", "PLC", "PLE", "PLR", "PLW",
]
ignore = [
    "S101",     # assert usage (fine in tests)
    "PLR2004",  # magic-value-comparison — too noisy for status codes, enum ints, thresholds
    "PLC0415",  # import-outside-top-level — deferred imports are intentional
    "TRY003",   # raise-vanilla-args — descriptive error messages in raise are preferred
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N806", "PLR0913"]
"src/ctpf/**/cli*.py" = ["B008", "PLR0913"]  # typer.Option() defaults + many CLI params
"src/ctpf/core/db.py" = ["A002", "PLR0913"]  # type/hash params match DB column names + CRUD args
"src/ctpf/audit/mapper.py" = ["PLR0913"]  # audit scan creation takes many params
"src/ctpf/proxy/tui/app.py" = ["PLR0913"]  # TUI app constructor takes transport config params

[tool.bandit]
# Skip checks already enforced by ruff's flake8-bandit (S) rules.
# All instances are reviewed and suppressed with # noqa: SXXX in source.
# Bandit doesn't recognize # noqa — it uses # nosec — so we skip at config level.
skips = [
    "B101",  # assert usage — ruff S101 (ignored in tests via per-file-ignores)
    "B105",  # hardcoded password string — false positive on token filenames
    "B110",  # try/except/pass — reviewed, DB may not exist on first run
    "B310",  # urlopen — framework update fetcher, reviewed
    "B506",  # yaml.load — uses custom DuplicateKeyLoader, not unsafe default
    "B608",  # SQL injection — all use parameterized ? placeholders with f-string placeholder counts
    "B104",  # hardcoded bind all interfaces — proxy client adapters must accept network connections
]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
markers = [
    "integration: marks tests requiring external services (deselect with '-m \"not integration\"')",
]
