[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "q-uestionable-ai"
version = "0.11.0"
description = "Compatibility installer for CTPF Research Harness"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
authors = [
    { name = "Richard Spicer", email = "richard@richardspicer.io" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
]
dependencies = ["ctpf==0.11.0"]

[project.urls]
Homepage = "https://q-uestionable.ai"
Repository = "https://github.com/q-uestionable-AI/CTPF"
Issues = "https://github.com/q-uestionable-AI/CTPF/issues"

[tool.hatch.build.targets.wheel]
bypass-selection = true
